--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,8 @@ buildscript {
 allprojects {
 
     ext {
-        appName = 'Shattered Pixel Dungeon'
-        appPackageName = 'com.shatteredpixel.shatteredpixeldungeon'
+        appName = 'Little Pixel Dungeon'
+        appPackageName = 'com.Littlesector.littlepixeldungeon'
 
         appVersionCode = 754
         appVersionName = '2.2.1'
